# renderer

./: CMakeLists.txt  README.md
include/: calculator.h  renderer.h  shader.h
include/glad/: glad.h
src/: calculator.cc  camera.cc  glad.c  index_buffer.cc  index_buffer.h  main.cc  renderer.cc  renderer.h  shader.cc  test.cc  texture.cc  texture.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h  vertex_buffer_layout.h
src/shaders/: infinite_grid.fs  infinite_grid.vs  lighting.vs  shader.fs  shader.vs  test.vs
