cmake_minimum_required(VERSION 3.10)
project(opengl VERSION 1.0)
set(SOURCE_FILE1 src/main.cc)
set(SOURCE_FILE2 src/glad.c)
set(SOURCE_FILE3 src/shader.cc)
set(SOURCE_FILE4 src/stb_image.cc)
set(SOURCE_FILE5 src/vertex_buffer.cc)
set(SOURCE_FILE6 src/index_buffer.cc)
set(SOURCE_FILE7 src/renderer.cc)
set(SOURCE_FILE8 src/vertex_buffer.cc)
set(SOURCE_FILE9 src/vertex_array.cc)
add_executable(opengl ${SOURCE_FILE1} ${SOURCE_FILE2} ${SOURCE_FILE3} ${SOURCE_FILE4} ${SOURCE_FILE5} ${SOURCE_FILE6} ${SOURCE_FILE7} ${SOURCE_FILE8} ${SOURCE_FILE9})
target_include_directories(opengl PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(opengl PUBLIC ${PROJECT_SOURCE_DIR}/lib/libglfw3.a)